apps/base/echo/tls-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: tls-echo-gateway
  namespace: echo
  annotations:
    cert-manager.io/issuer: cilium
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      hostname: echo.cloud.ogenki.io
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - name: echo-tls
