apps/base/echo/httproute-mirroring.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mirror-echo
  namespace: echo
spec:
  parentRefs:
    - name: platform-public
      namespace: infrastructure
      sectionName: https
  hostnames:
    - "mirror-echo.${domain_name}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestMirror
          requestMirror:
            backendRef:
              name: echo-2-echo-server
              port: 80
      backendRefs:
        - name: echo-1-echo-server
          port: 80
