apps/base/echo/httproute-split.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: split-echo
  namespace: echo
spec:
  parentRefs:
    - name: echo-tls
      namespace: infrastructure
  hostnames:
    - "split-echo.${domain_name}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: echo-1-echo-server
          port: 80
          weight: 9
        - name: echo-2-echo-server
          port: 80
          weight: 1
