apps/base/echo/httproute-tls-echo-2.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: tls-echo-2
  namespace: echo
spec:
  parentRefs:
    - name: tls-shared-gateway
      namespace: kube-system
  hostnames:
    - "tls-echo-2.${domain_name}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: echo-2-echo-server
          port: 80
