apps/base/echo/httproute-unsecure.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: unsecure-echo-1
  namespace: echo
spec:
  parentRefs:
    - name: unsecure-echo
      namespace: echo
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: echo-1-echo-server
          port: 80
