apps/base/echo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-http-https-redirect
  namespace: echo
spec:
  parentRefs:
    - name: platform-public
      sectionName: http
  hostnames:
    - "echo.${domain_name}"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-1
  namespace: echo
spec:
  parentRefs:
    - name: platform-public
      sectionName: https
      namespace: infrastructure
  hostnames:
    - "echo.${domain_name}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /req-header-add
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: foo
                value: bar
      backendRefs:
        - name: echo-1-echo-server
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /resp-header-add
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: bar
                value: baz
      backendRefs:
        - name: echo-1-echo-server
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /google
      filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: google.fr
            scheme: https
            path:
              type: ReplaceFullPath
              replaceFullPath: /
            statusCode: 301
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: echo-1-echo-server
          port: 80
