apps/base/echo/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: echo-1
spec:
  parentRefs:
  - name: echo-gateway
    namespace: echo
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: echo-1-echo-server
      port: 80
